Add compatibility, performance, and concurrency qualification
Add Java 21 and Java 25 compatibility matrices, Jupiter-native contract tests, parser and serializer fuzzing, persistence failure injection, external consumer probes, JMH evidence, JCStress checks, and deterministic soak coverage.

Signed-off-by: Shuaib Rao <99695611+shuaibrao@users.noreply.github.com>